src/objects/LMS_AppDynamics__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Application Settings</description>
    <fields>
        <fullName>LMS_DefaultNumberOfUnits__c</fullName>
        <description>Default Number Of Units</description>
        <inlineHelpText>Default Number Of Units</inlineHelpText>
        <label>LMS Default Number Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_OpportunityStageName__c</fullName>
        <description>Name of Opportuity Stage on which the new Trainig Units object will be crated.</description>
        <inlineHelpText>Name of Opportuity Stage on which the new Trainig Units object will be crated.</inlineHelpText>
        <label>LMS Opportunity Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_ProductFamily__c</fullName>
        <label>LMS Product Family</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>LMS App Dynamics</label>
</CustomObject>